--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coronasdk-slider",
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "description": "Turn a display object into a sliding panel",
   "main": "init.lua",
   "dependencies": {
